# winbincov

./: .gitignore  CMakeLists.txt  Debugger.cpp  Debugger.h  README.md  main.cpp  trace_viewer.py
BinaryNinjaPlugins/CoverageHighlight/: __init__.py  plugin.json
BinaryNinjaPlugins/ExportBreakpointsWinbincov/: LICENSE  __init__.py  plugin.json
lib/: spdlog.lib
